fixed spotless